--- a/Symetrix-460-Controller/settingsdialog.ui
+++ b/Symetrix-460-Controller/settingsdialog.ui
@@ -6,14 +6,28 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>186</width>
-    <height>160</height>
+    <width>264</width>
+    <height>164</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Settings</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="2" column="0">
+    <widget class="QLabel" name="idLabel">
+     <property name="text">
+      <string>ID:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="0">
+    <widget class="QLabel" name="portLabel">
+     <property name="text">
+      <string>Serial Port:</string>
+     </property>
+    </widget>
+   </item>
    <item row="1" column="0">
     <widget class="QLabel" name="baudRateLabel">
      <property name="text">
@@ -21,7 +35,27 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
+   <item row="0" column="1" colspan="3">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QComboBox" name="portBox"/>
+     </item>
+     <item>
+      <widget class="QPushButton" name="refreshButton">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="text">
+        <string>Refresh</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="1" column="1" colspan="3">
     <widget class="QComboBox" name="baudRateBox">
      <item>
       <property name="text">
@@ -50,14 +84,17 @@
      </item>
     </widget>
    </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="portLabel">
-     <property name="text">
-      <string>Serial Port:</string>
+   <item row="2" column="1" colspan="3">
+    <widget class="QSpinBox" name="idSpinBox">
+     <property name="minimum">
+      <number>1</number>
+     </property>
+     <property name="maximum">
+      <number>127</number>
      </property>
     </widget>
    </item>
-   <item row="3" column="0" colspan="2">
+   <item row="3" column="1" colspan="3">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -67,26 +104,6 @@
      </property>
      <property name="centerButtons">
       <bool>true</bool>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="QComboBox" name="portBox"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="idLabel">
-     <property name="text">
-      <string>ID:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1">
-    <widget class="QSpinBox" name="idSpinBox">
-     <property name="minimum">
-      <number>1</number>
-     </property>
-     <property name="maximum">
-      <number>127</number>
      </property>
     </widget>
    </item>
